cleanup demos